# birds-eye-view

./: .gitignore  LICENSE  README.md  app.py  core.py  emoji_map_tweaking.py  file_loading.py  import _mmlu.py  main.py  plotting.py  plotting_stable.py  prompts.py  pyproject.toml  requirements.txt  setup.py  visualisation.py  visualisation_st.py  viz.py
.devcontainer/: devcontainer.json
birds_eye_view/: core.py  file_loading.py  plotting.py  prompts.py
cache/emoji/: text-embedding-3-large_index.json
tutorials/: minimal_example.py  mmlu.py
