[tool.poetry]
name = "birds-eye-view"
version = "0.1.0"
description = ""
authors = ["aVariengien <alexandre.variengien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bokeh = "3.5.2"
streamlit = "1.36.0"
streamlit-shortcuts = "0.1.9"
plotly = "5.22.0"
platformdirs = "4.2.2"
openai = "1.33.0"
numpy = "1.26.4"
umap-learn = "0.5.6"
h5py = "3.12.1"
markdown = "3.7"
scikit-learn = "1.5.0"
langchain = "0.2.14"
langchain-community = "0.2.12"
langchain-core = "0.2.34"
langchain-text-splitters = "0.2.2"
readability-lxml = "0.8.1"
urllib3 = "2.2.1"
markdownify = "0.13.1"
html2text = "2024.2.26"
colorcet = "3.1.0"
anthropic = "0.20.0"
lxml-html-clean = "0.4.1"
httpx = "0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
